--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,11 @@ dependencies:
     sdk: flutter
   english_words: ^4.0.0
   provider: ^6.1.5
+  flutter_localizations:
+    sdk: flutter
+  intl: 0.20.2
+  flutter_gen: ^5.10.0
+  flutter_riverpod: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -18,6 +23,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  generate: true
   assets:
     - assets/images/
+    - assets/images/languages/
   uses-material-design: true
