--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   intl: 0.20.2
   flutter_gen: ^5.10.0
   flutter_riverpod: ^2.0.0
+  flutter_bluetooth_serial: ^0.4.0
+  permission_handler: ^12.0.0
 
 dev_dependencies:
   flutter_test:
